<resources>
    <string name="app_name">VTB_hack</string>
    <string name="server_error">Что-то пошло не так на сервере</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Услуги -->
    <string name="transit"> Перевод денежных средств</string>
    <string name="payment"> Оплата услуг и коммунальных платежей</string>
    <string name="invalid"> Поддержка инвалидов</string>
    <string name="consultation"> Консультирование по инвестированию и управлению финансами</string>
    <string name="reissue"> Перевыпуск/замена утерянной или поврежденной банковской карты</string>
    <string name="safe"> Открытие сейфового хранилища</string>
    <string name="account_statement"> Получение выписок по счету</string>
    <string name="Insurance"> Услуги страхования</string>
    <string name="business_account"> Открытие счета для бизнеса или предпринимателя</string>
    <string name="refinance"> Рефинансирование кредита или перевод его в другой банк</string>
    <string name="usd"> Размен USD</string>
    <string name="eur"> Размен EUR</string>
    <string name="new_account"> Открытие нового счета/депозита</string>
    <string name="credit"> Получение кредита/ипотеки</string>
    <string name="credit_card"> Оформление кредитной карты</string>
</resources>